Update package list

--- a/GUI/AppsConfig.json
+++ b/GUI/AppsConfig.json
@@ -28,6 +28,7 @@
     "Microsoft.ScreenSketch",
     "Microsoft.SkypeApp",
     "Microsoft.SkyDrive.Desktop",
+    "Microsoft.StartExperiencesApp",
     "Microsoft.WindowsTerminal",
     "Microsoft.Todos",
     "Microsoft.Wallet",
